# ORIGA

./: .gitignore  1688_parser.py  README.md  alibaba_1688_parser.py  analysis_report.json  cargo_manager.html  cargo_manager_integration.py  cargo_products.csv  config.py  config.yaml  example_usage.py  index.html  pyproject.toml  requirements.txt  run.sh  sample_products.csv  test_installation.py  test_parser.py  utils.py
1688parser/: browser.py  cli.py  http_client.py  models.py  parser.py
aliyun1688parser/: __init__.py  cli.py  parser.py
aliyun1688parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: scoring_rules.yaml
server/: api_docs_ru.md  config.py  ddp.py  exporters.py  fx.py  main.py  models.py  rfq.py  scoring.py  search_1688.py  utils.py
web/: index.html
